<resources>
    <string name="app_name">AndroidFundamentalsSpring2022</string>
    <string name="i_am_a_textview">I am a TextView</string>
    <string name="i_am_a_button">I am a Button</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="i_accept_the_terms_and_conditions">I accept the terms and conditions</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="light_on_off">Light on/off</string>
    <string name="search_android_hint">Search for Android versions</string>
    <string name="long_message">Android is super! Let\'s learn about View Groups in Android Android is super! Let\'s learn about View Groups in Android Android is super! Let\'s learn about View Groups in Android</string>
    <string name="short_text">This is a TextView inside of a FrameLayout</string>
    <string name="first_textview">First TextView</string>
    <string name="second_textview">Second TextView</string>
    <string name="third_textview">Third TextView</string>
    <string name="please_select_an_android_version">Please select an Android version</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="this_is_the_firstactivity">This is the FirstActivity</string>
    <string name="ok">OK</string>
    <string name="this_is_the_secondactivity">This is the SecondActivity</string>
    <string name="call_a_phone_number">Call a phone number</string>
    <string name="open_a_website">Open a website</string>
    <string name="open_activity1">Open Activity1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_bundleactivity">Open BundleActivity</string>
    <string name="send_numbers">Send numbers</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="slideshow_fragment">Slideshow fragment</string>
    <string name="gallery_fragment">Gallery Fragment</string>
    <string name="fragment_home">Fragment Home</string>
    <string name="blockchain_doesn_t_matter_here_s_why_inside_design_blog">Blockchain doesn\'t matter. Here\'s why. Inside Design Blog</string>
    <string name="invision_yesterday">InVision - Yesterday</string>
    <string name="button_with_background">Button with background</string>
    <string name="open_datepicker">Open DatePicker</string>
    <string name="open_timepicker">Open TimePicker</string>
</resources>